[package]
name = "pi_pico_blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
rp-pico = "0.9.0"
nb = "1.1.0"
fugit = "0.3.7"
embedded-hal = "1.0.0"
dht-embedded = "0.4.0"
hd44780-driver = { git = "https://github.com/JohnDoneth/hd44780-driver.git", rev = "ad597b8" }
heapless = "0.8.0"
